# cyberfire-backend-v2

./: .gitignore  README.md  alembic.ini  generated_users.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0e78fec9c169_initial.py  af6d9987c47e_some_changes_in_new_models.py  bc40bfed4e6e_tvt_tables.py
src/app/: .env.sample  config.py  dotenv_loader.py  main.py  utils.py
src/app/crud/: lobbies.py  news.py  stages.py  stats.py  tournaments.py  user.py
src/app/crud/royale/: lobbies.py  stages.py  stats.py  tournaments.py
src/app/crud/tvt/: stages.py  stats.py  tournaments.py
src/app/database/: db.py  init.py
src/app/exceptions/: auth_exceptions.py  base.py  db_exceptions.py  formatter_exceptions.py  scheduler_exceptions.py  tournament_exceptions.py  user_exceptions.py
src/app/middleware/: auth_middleware.py  db_session_middleware.py  log_middleware.py
src/app/models/: games.py  lobbies.py  news.py  roles.py  squad.py  stage.py  stats.py  tournament.py  tournament_events.py  tournament_states.py  user.py
src/app/models/royale/: lobbies.py  squad.py  stage.py  stats.py  tournament.py
src/app/models/tvt/: match.py  stage.py  team_stats.py  tournament.py
src/app/routers/: lobbies.py  news.py  stages.py  stats.py  tournaments.py  users.py
src/app/routers/royale/: lobbies.py  stages.py  stats.py  tournaments.py
src/app/routers/tvt/: map_selector.py  stats.py  tournaments.py
src/app/schemas/: lobbies.py  news.py  squad.py  stage.py  stats.py  token_data.py  tournaments.py  user.py
src/app/schemas/royale/: lobbies.py  squad.py  stage.py  stats.py  tournaments.py
src/app/schemas/tvt/: map_choice_data.py  matches.py  stages.py  team_stats.py  tournaments.py
src/app/services/: auth.py  auth_service.py  lobby_service.py  redis_service.py  schedule_service.py  tournaments_service.py
src/app/services/banword_service/: banlist_generator.py  banwords.json  to_generate_data.py  wordbanner.py
src/app/services/royale/: lobby_service.py  tournaments_service.py
src/app/services/tvt/: internal_tournament_state.py  map_choice_service.py  tournaments_service.py
src/tests/: external_tournament_tests.py  external_tournaments_tests.py  tournaments_tests.py
