[tool.poetry]
name = "cyberfire"
version = "0.1.0"
description = ""
authors = ["Vlad Nenov <xrapovva@mail.ru>"]
packages = [
    { include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
SQLAlchemy = "^1.4.22"
psycopg2 = "^2.9.1"
bcrypt = "^3.2.0"
uvicorn = "^0.14.0"
loguru = "^0.5.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server = "src.app.main:start"
create_tables = "src.app.database.init:create_tables"
drop_tables = "src.app.database.init:run_drop_tables"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
