[tool.poetry]
name = "cyberfire"
version = "1.0.3"
description = ""
authors = ["Vlad Nenov <xrapovva@mail.ru>"]
packages = [
    { include = "src", from = "."}
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.67.0"
SQLAlchemy = "^1.4.22"
bcrypt = "^3.2.0"
loguru = "^0.5.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
aiofiles = "^0.7.0"
python-multipart = "^0.0.5"
APScheduler = "^3.7.0"
requests = "^2.26.0"
pytest = "^6.2.4"
psycopg2-binary = "^2.9.1"
websockets = "^9.1"
uvicorn = {extras = ["standart"], version = "^0.15.0"}
gunicorn = "^20.1.0"
alembic = "^1.6.5"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"
redis = "^3.5.3"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server = "src.app.main:start"
create_tables = "src.app.database.init:create_tables"
drop_tables = "src.app.database.init:run_drop_tables"
test_tournaments = "src.tests.tournaments_tests:test_tournament"
test_tournaments_prod = "src.tests.external_tournaments_tests:test_tournament"
generate_banwords = "src.app.services.banword_service.banlist_generator:generate"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
